# FSKI

./: .gitignore  README.md  bunny.db  demo.db  go.mod  pyproject.toml  run_demo.py  start.cmd
app/: bunny.py  capabilities.py  net.py  ui.py  ui_app.py
app/organs/: __init__.py  assimilate.py  axiom_refine.py  beliefs.py  curriculum.py  daydream.py  decider.py  devlab.py  evidence.py  evolve.py  failure_clusters.py  feedback.py  introspect.py  memory_consolidate.py  mood.py  policy_kernel.py  selfeval.py  selfreport.py  sensory_memory.py  skills.py  sleep.py  test_runner.py  topic.py  websense.py  workspace_arbiter.py
app/tools/: eval_pain.py
app/ui/: __main__.py  db_ops.py  kernel.py  main.py
bunnycore/: __init__.py
bunnycore/core/: __init__.py  adapters.py  db.py  events.py  heartbeat.py  integrator.py  matrices.py  matrix_store.py  registry.py  schema.py  state.py
cmd/frankenstein/: executive_turn.go  executive_turn_meta.go  executive_turn_test.go  main.go  say_context.go  say_context_test.go  say_mutation.go  selflines.go  stance_answer.go
data/: epigenome.json  frankenstein.sqlite  frankenstein.sqlite-shm  frankenstein.sqlite-wal
internal/: go.mod
internal/brain/: ab_trials.go  affect.go  affect_persist.go  area_daydream.go  area_helpplanner.go  area_social_ping.go  area_speak.go  autonomy.go  axiom_context.go  axiom_interpretations.go  axiom_learning.go  axiom_metrics.go  axioms_kernel.go  bodytick.go  bus.go  concepts.go  critic.go  daydream.go  dialog_context.go  drives.go  drives_v1.go  epigenome_proposals.go  evolution_bootstrap.go  executive.go  (+43 more)
(+16 files in other folders)
